feat: Finalizando a responsividade de algumas páginas

--- a/src/app/modules/create-project/pages/details/details.component.scss
+++ b/src/app/modules/create-project/pages/details/details.component.scss
@@ -32,3 +32,17 @@
     }
   }
 }
+
+@media (width <= 540px) {
+  .content {
+    padding-bottom: 95px;
+
+    .box-buttons {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100vw;
+      padding: 25px;
+    }
+  }
+}
