feat: Ajustando o form da página DetailsComponent

--- a/src/app/modules/create-project/pages/details/details.component.html
+++ b/src/app/modules/create-project/pages/details/details.component.html
@@ -7,7 +7,7 @@
             <app-paragraph>(opcional)</app-paragraph>
          </div>
       </div>
-      <app-main-input formControlName="title" [control]="form.controls.title" placeholder="Título"></app-main-input>
+      <app-main-input formControlName="name" [control]="form.controls.name" placeholder="Título"></app-main-input>
       <app-textarea formControlName="description" [control]="form.controls.description" placeholder="Descrição" [optional]="true"></app-textarea>
    </form>
    <div class="box-buttons flex align">
