--- a/src/app/modules/project/pages/project-details/project-details.component.html
+++ b/src/app/modules/project/pages/project-details/project-details.component.html
@@ -1,5 +1,5 @@
 <div class="topic flex align">
-   <app-profile-image [smaller]="true" url="https://picsum.photos/200/300?random=2"></app-profile-image>
+   <app-profile-image [smaller]="true" [url]="($project | async)?.imageUrl"></app-profile-image>
    <h2>{{($project | async)?.name}}</h2>
 </div>
 <app-nav-tab [content]="sidebarContent"></app-nav-tab>
