--- a/src/app/modules/project/pages/projects/projects.component.html
+++ b/src/app/modules/project/pages/projects/projects.component.html
@@ -10,7 +10,7 @@
          </ng-container>
          <ng-container content>
             <div class="project-list flex-column">
-               <app-sidebar-project-card [url]="'https://picsum.photos/200/300?random=' + i"
+               <app-sidebar-project-card [url]="project.imageUrl"
                   *ngFor="let project of (projectList$ | async)?.projects; trackBy: trackByService.track; index as i"
                   [project]="project"></app-sidebar-project-card>
             </div>
