feat: Ajustando alguns estilos

--- a/src/app/shared/components/task-status/task-status.component.html
+++ b/src/app/shared/components/task-status/task-status.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="status">
    <span
-     [class]="status"
+     [class]="status.toLowerCase()"
      >{{ translatedStatus }}
    </span>
  </ng-container>
