--- a/src/app/shared/components/templates/sidebar-template/sidebar-template.component.html
+++ b/src/app/shared/components/templates/sidebar-template/sidebar-template.component.html
@@ -1,7 +1,7 @@
 <div class="container flex">
-   <div class="aside">
+   <aside class="aside">
       <ng-content select="[aside]"></ng-content>
-   </div>
+   </aside>
    <div class="content">
       <ng-content select="[content]"></ng-content>
    </div>
