--- a/src/app/shared/components/nav-tab/nav-tab.component.scss
+++ b/src/app/shared/components/nav-tab/nav-tab.component.scss
@@ -46,4 +46,19 @@ ul {
       }
     }
   }
+
+  &.light {
+    background-color: $color-base-100;
+    padding: 5px 10px 0px;
+    border-bottom: 1px solid $color-base-200;
+
+    li {
+      width: -moz-fit-content;
+      width: fit-content;
+
+      a {
+        color: $color-secondary-700;
+      }
+    }
+  }
 }
