--- a/src/app/modules/project/pages/project-tasks/project-tasks.component.html
+++ b/src/app/modules/project/pages/project-tasks/project-tasks.component.html
@@ -18,6 +18,6 @@
       </div>
    </ng-container>
    <ng-container content>
-
+      <router-outlet></router-outlet>
    </ng-container>
 </app-sidebar-template>
