--- a/src/app/modules/task/pages/tasks/tasks.component.html
+++ b/src/app/modules/task/pages/tasks/tasks.component.html
@@ -1,6 +1,6 @@
 <app-sidebar-template>
    <ng-container aside>
-      <app-sidebar title="Projetos" class="aside">
+      <app-sidebar title="Tarefas" class="aside">
          <ng-container searchInput>
             <app-search-input placeholder="Buscar tarefas"></app-search-input>
          </ng-container>
