feat: Atualizando alguns estilos

--- a/src/app/shared/components/member-card/member-card.component.scss
+++ b/src/app/shared/components/member-card/member-card.component.scss
@@ -15,7 +15,7 @@ button {
 
   &:hover {
     cursor: pointer;
-    background-color: $color-base-200;
+    background-color: transparentize($color: $color-base-200, $amount: 0.7);
   }
   
   .content {
