feat: Configurando a versão light do SearchInputComponent

--- a/src/app/shared/components/search-input/search-input.component.html
+++ b/src/app/shared/components/search-input/search-input.component.html
@@ -1,4 +1,4 @@
-<div class="search-input" [class.full-width]="fullWidth">
+<div class="search-input" [class.full-width]="fullWidth" [class.light]="light">
    <input [type]="type" [placeholder]="placeholder">
    <fa-icon icon="magnifying-glass"/>
 </div>
