--- a/src/app/modules/project/components/task-card/task-card.component.scss
+++ b/src/app/modules/project/components/task-card/task-card.component.scss
@@ -14,6 +14,8 @@ a {
   color: $color-secondary-900;
   font-size: $text-base;
   transition: 200ms ease-out;
+  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.05);
+
 
   &:hover {
     cursor: pointer;
