--- a/src/app/modules/create-task/pages/task-formulary/task-formulary.component.html
+++ b/src/app/modules/create-task/pages/task-formulary/task-formulary.component.html
@@ -2,14 +2,13 @@
    <app-title-1 class="title">Criar Tarefa</app-title-1>
    <div class="content">
       <form class="flex-column" [formGroup]="form">
-         <app-main-input formControlName="name" [control]="form.controls.name" placeholder="Título"></app-main-input>
+         <app-main-input formControlName="title" [control]="form.controls.title" placeholder="Título"></app-main-input>
          <div class="double-input">
-            <app-main-input formControlName="name" [control]="form.controls.name"
-               placeholder="Data de entrega"></app-main-input>
-            <app-main-input formControlName="name" [control]="form.controls.name"
+            <app-main-input formControlName="criticality" [control]="form.controls.criticality"
                placeholder="Prioridade"></app-main-input>
+            <app-main-input formControlName="deadline" [control]="form.controls.deadline"
+               placeholder="Data de entrega"></app-main-input>
          </div>
-         <app-main-input formControlName="name" [control]="form.controls.name" placeholder="Categoria"></app-main-input>
          <app-textarea formControlName="description" [control]="form.controls.description" placeholder="Descrição"
             [optional]="true"></app-textarea>
       </form>
