refactor: Ajustando a página de projetos

--- a/src/app/modules/project/pages/projects/projects.component.html
+++ b/src/app/modules/project/pages/projects/projects.component.html
@@ -11,7 +11,7 @@
          <ng-container content>
             <div class="project-list flex-column">
                <app-sidebar-project-card [url]="project.imageUrl"
-                  *ngFor="let project of (projectList$ | async)?.projects; trackBy: trackByService.track; index as i"
+                  *ngFor="let project of (projectList$ | async); trackBy: trackByService.track; index as i"
                   [project]="project"></app-sidebar-project-card>
             </div>
          </ng-container>
