feat: Criando o FileButtonComponent

--- a/src/app/shared/components/buttons/file-button/file-button.component.html
+++ b/src/app/shared/components/buttons/file-button/file-button.component.html
@@ -1,1 +1,11 @@
-<p>file-button works!</p>
+<app-primary-button
+  titleValue="{{ titleValue }}"
+  (onClick)="input.click()"
+  [status]="status"
+  [fullWidth]="fullWidth"
+  [routerLinkValue]="routerLinkValue"
+>
+  <ng-content></ng-content>
+</app-primary-button>
+
+<input #input (change)="onFileDropped($event)" type="file" />
