--- a/src/app/modules/create-task/pages/task-formulary/task-formulary.component.html
+++ b/src/app/modules/create-task/pages/task-formulary/task-formulary.component.html
@@ -2,7 +2,8 @@
    <app-title-1 class="title">Criar Tarefa</app-title-1>
    <div class="content">
       <form class="flex-column" [formGroup]="form">
-         <app-main-input [errorMessages]="errorMessages.title" formControlName="title" [control]="form.controls.title" placeholder="Título"></app-main-input>
+         <app-main-input [errorMessages]="errorMessages.title" formControlName="title" [control]="form.controls.title"
+            placeholder="Título"></app-main-input>
          <div class="double-input">
             <app-main-input formControlName="criticality" [control]="form.controls.criticality"
                placeholder="Prioridade"></app-main-input>
@@ -16,13 +17,15 @@
       <app-h3-title class="h3-title">Membros</app-h3-title>
       <app-primary-button [fullWidth]="true" [status]="statusEnum.Dark">
          <fa-icon icon="plus"></fa-icon>
-         Adicionar membro
+         Adicionar Membro
       </app-primary-button>
+      
       <app-h3-title class="h3-title">Anexos</app-h3-title>
-      <app-primary-button [fullWidth]="true" [status]="statusEnum.Dark">
-         <fa-icon icon="plus"></fa-icon>
-         Adicionar Anexo
-      </app-primary-button>
+         <app-file-button [fullWidth]="true" [status]="statusEnum.Dark">
+            <fa-icon icon="plus"></fa-icon>
+            Adicionar Anexo
+         </app-file-button>
+
       <div class="box-buttons flex align">
          <app-primary-button (onClick)="onSubmit()">Criar</app-primary-button>
       </div>
