fix: Corrigindo o método do onFileInput FileButtonComponent

--- a/src/app/shared/components/buttons/file-button/file-button.component.html
+++ b/src/app/shared/components/buttons/file-button/file-button.component.html
@@ -8,4 +8,4 @@
   <ng-content></ng-content>
 </app-primary-button>
 
-<input #input (change)="onFileDropped($event)" type="file" />
+<input #input (input)="onFileInput($event)" type="file" />
