--- a/src/app/modules/create-task/pages/task-formulary/task-formulary.component.html
+++ b/src/app/modules/create-task/pages/task-formulary/task-formulary.component.html
@@ -19,12 +19,24 @@
          <fa-icon icon="plus"></fa-icon>
          Adicionar Membro
       </app-primary-button>
-      
+
+
       <app-h3-title class="h3-title">Anexos</app-h3-title>
-         <app-file-button [fullWidth]="true" [status]="statusEnum.Dark">
-            <fa-icon icon="plus"></fa-icon>
-            Adicionar Anexo
-         </app-file-button>
+      <app-file-button (addFile)="addFile($event)" [fullWidth]="true" [status]="statusEnum.Dark">
+         <fa-icon icon="plus"></fa-icon>
+         Adicionar Anexo
+      </app-file-button>
+
+      <div class="box-files">
+         <app-file-card *ngFor="let file of fileList" [file]="file">
+            <ng-container actions>
+               <app-dropdown-menu>
+                  <app-menu-button (onClick)="downloadFile(file)" [primaryIcon]="['far','circle-down']">Download</app-menu-button>
+                  <app-menu-button (onClick)="removeFile(file)" [primaryIcon]="['far','trash-can']" [status]="statusEnum.Warn">Deletar</app-menu-button>
+               </app-dropdown-menu>
+            </ng-container>
+         </app-file-card>
+      </div>
 
       <div class="box-buttons flex align">
          <app-primary-button (onClick)="onSubmit()">Criar</app-primary-button>
