--- a/src/app/modules/create-task/pages/task-formulary/task-formulary.component.scss
+++ b/src/app/modules/create-task/pages/task-formulary/task-formulary.component.scss
@@ -21,6 +21,13 @@ form {
   margin: 25px 0 5px;
 }
 
+.box-files {
+  gap: 10px;
+  margin-top: 10px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(min(200px, 100%), 1fr));
+}
+
 .box-buttons {
   justify-content: flex-end;
   margin-top: 40px;
