--- a/src/app/modules/project/pages/project-tasks/project-tasks.component.html
+++ b/src/app/modules/project/pages/project-tasks/project-tasks.component.html
@@ -2,7 +2,7 @@
    <ng-container aside>
       <div class="aside-container">
          <div class="aside-header flex-column">
-            <app-primary-button routerLinkValue="../../../criar-tarefa" [fullWidth]="true">
+            <app-primary-button [routerLinkValue]="'../../../criar-tarefa/' + projectId" [fullWidth]="true">
                <fa-icon icon="plus"></fa-icon>
                Adicionar tarefa
                </app-primary-button>
