--- a/src/app/shared/components/member-modal/member-modal.component.scss
+++ b/src/app/shared/components/member-modal/member-modal.component.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import "variables";
 
 :host {
   display: block;
@@ -22,26 +22,41 @@
     background-color: white;
     width: 90%;
     border-radius: 10px;
+    overflow: hidden;
     position: relative;
-    box-shadow: 0px 25px 57px rgba(0, 0, 0, 0.40);
-    padding: 30px 18px 18px;
+    box-shadow: 0px 25px 57px rgba(0, 0, 0, 0.4);
+    // padding: 30px 18px 18px;
     max-width: 400px;
 
     .close-button {
       position: absolute;
       right: 15px;
-      top: 15px;
+      top: 21px;
     }
 
-    h3 {
-      font-family: $font-family-secondary;
-      color: #565B61;
-      margin-bottom: 5px;
+    .modal-header {
+      border-bottom: 1px solid $color-base-300;
+      padding: 18px 18px 10px;
+      background-color: transparentize($color: $color-secondary-100, $amount: 0.5);
+
+      h3 {
+        width: 88%;
+        font-weight: 600;
+        font-family: $font-family-secondary;
+        color: #565b61;
+        margin-bottom: 5px;
+      }
     }
 
-    form {
-      gap: 20px;
-      margin: 20px 0px 30px;
+    .content {
+      padding: 13px 18px 18px;
+
+      .member-list {
+        gap: 5px;
+        border-top: 1px solid $color-base-300;
+        padding: 5px 0;
+        margin-top: 15px;
+      }
     }
 
     .box-button {
