--- a/src/app/shared/components/member-checkbox/member-checkbox.component.html
+++ b/src/app/shared/components/member-checkbox/member-checkbox.component.html
@@ -4,9 +4,8 @@
       #element
       class="custom-checkbox"
       [checked]="checked"
-      [disabled]="disabled"
       [checked]="value"
-      (input)="writeValue(element.checked)"
+      (input)="toggle.emit(element.checked)"
       [id]="idValue ?? 'member-checkbox'"
       type="checkbox"
     />
@@ -15,3 +14,5 @@
     </div>
   </label>
 </button>
+
+<!-- (input)="writeValue(element.checked)" -->
