feat: Atulizando inputs do  ListOfMembersComponent

--- a/src/app/shared/components/list-of-members/list-of-members.component.html
+++ b/src/app/shared/components/list-of-members/list-of-members.component.html
@@ -1,4 +1,4 @@
 <app-card-container [padding]="6">
-    <app-member-card [fullWidth]="true" *ngFor="let user of userList" [user]="user">
+    <app-member-card [fullWidth]="true" *ngFor="let member of memberList" [member]="member">
     </app-member-card>
 </app-card-container>
