--- a/src/app/modules/project/pages/project-task-info/project-task-info.component.html
+++ b/src/app/modules/project/pages/project-task-info/project-task-info.component.html
@@ -29,7 +29,7 @@
          </app-card-container>
 
          <app-h3-title>Membros</app-h3-title>
-         <app-list-of-members [userList]="userList"></app-list-of-members>
+         <app-list-of-members [memberList]=""></app-list-of-members>
          <app-h3-title>Tags</app-h3-title>
       </div>
    </ng-container>
