chore: Recebendo o MessageResponse no MessageCardComponent

--- a/src/app/shared/components/message-card/message-card.component.html
+++ b/src/app/shared/components/message-card/message-card.component.html
@@ -3,6 +3,6 @@
    <h4 *ngIf="!currentUserMessage">{{message?.sender?.nickname}}</h4>
    <div class="content flex">
       <p>{{message?.content}}</p>
-      <span>{{message?.sendIn | date:"HH:mm"}}</span>
+      <span>{{message?.sentIn | date:"HH:mm"}}</span>
    </div>
 </div>
