feat: Implementando a diretiva appHideItemByRoute no SidebarComponent

--- a/src/app/shared/components/sidebars/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebars/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<aside>
+<aside *appHideItemByRoute>
    <div class="aside-header">
       <div class="content flex align">
          <h1>{{title}}</h1>
