feat: Implementando a diretiva appHideItemByRoute na

--- a/src/app/modules/core/components/icons-sidebar/icons-sidebar.component.html
+++ b/src/app/modules/core/components/icons-sidebar/icons-sidebar.component.html
@@ -1,4 +1,4 @@
-<aside class="flex-column">
+<aside *appHideItemByRoute class="flex-column">
    <nav>
       <ul class="flex-column align">
          <li>
